src/frontend/generated/OLangParser.cpp

// Generated from /home/scott/Projects/olang/grammar/OLangParser.g4 by ANTLR 4.11.1


#include <mutex>
#include "OLangParserListener.h"
#include <mutex>
#include "OLangParserVisitor.h"

#include <mutex>
#include "OLangParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct OLangParserStaticData final {
  OLangParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  OLangParserStaticData(const OLangParserStaticData&) = delete;
  OLangParserStaticData(OLangParserStaticData&&) = delete;
  OLangParserStaticData& operator=(const OLangParserStaticData&) = delete;
  OLangParserStaticData& operator=(OLangParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

std::once_flag olangparserParserOnceFlag;
OLangParserStaticData *olangparserParserStaticData = nullptr;

void olangparserParserInitialize() {
  assert(olangparserParserStaticData == nullptr);
  auto staticData = std::make_unique<OLangParserStaticData>(
    std::vector<std::string>{
      "program", "statementList", "statement", "expressionStatement", "emitStatement", 
      "signalStatement", "assertStatement", "declaration", "agentDeclaration", 
      "agentMember", "solverDeclaration", "solverMember", "proofDeclaration", 
      "invariantDeclaration", "importDeclaration", "dottedAsNamesList", 
      "dottedAsNames", "relativeModule", "importTargets", "importAsNames", 
      "bindingDeclaration", "functionDeclaration", "pipelineDeclaration", 
      "typeDeclaration", "annotationTypeDeclaration", "annotationStatement", 
      "expression", "pipelineExpression", "pipelineBody", "nullCoalesceExpression", 
      "ternaryExpression", "logicalOrExpression", "logicalAndExpression", 
      "equalityExpression", "relationalExpression", "additiveExpression", 
      "multiplicativeExpression", "unaryExpression", "errorPropagationExpression", 
      "postfixExpression", "callSuffix", "callArguments", "primaryExpression", 
      "type", "optionalType", "baseType", "primitiveType", "userDefinedType", 
      "pipelineType", "listType", "mapType", "setType", "streamType", "futureType", 
      "resultType", "optionType", "provenanceType", "functionType", "parenthesisType", 
      "genericArguments", "typeList", "genericParameters", "genericParameterList", 
      "genericParameter", "genericParameterConstraint", "whereClause", "constraintList", 
      "constraint", "typedField", "typedFieldList", "typedParameter", "typedParameterList", 
      "functionalExpression", "mapExpression", "filterExpression", "reduceExpression", 
      "foreachExpression", "groupByExpression", "flatMapExpression", "zipExpression", 
      "partitionExpression", "takeExpression", "dropExpression", "takeWhileExpression", 
      "dropWhileExpression", "sortByExpression", "distinctExpression", "countExpression", 
      "findExpression", "anyExpression", "allExpression", "joinExpression", 
      "joinClause", "windowExpression", "chunkExpression", "scanExpression", 
      "collectExpression", "lambdaExpression", "multipleParameterLambda", 
      "parameterList", "parameter", "simplePatternLambda", "simpleDestructure", 
      "simpleLambda", "simplePatternList", "simplePatternFieldList", "simplePatternElement", 
      "simplePatternField", "blockExpression", "transformationList", "transformation", 
      "matchExpression", "matchArm", "matchArmList", "pattern", "orPattern", 
      "andPattern", "primaryPattern", "wildcardPattern", "literalPattern", 
      "identifierPattern", "destructurePattern", "objectDestructure", "listDestructure", 
      "tupleDestructure", "namedDestructure", "rangePattern", "simpleRangeValue", 
      "typePattern", "simplePattern", "guardPattern", "simpleCondition", 
      "parenthesisPattern", "patternField", "patternFieldList", "patternList", 
      "mutationExpression", "mutationSite", "mutationChange", "rangeExpression", 
      "listExpression", "objectExpression", "objectField", "objectFieldList", 
      "assignmentStatement", "annotationPairList", "annotationPair", "annotationValue", 
      "listLiteral", "annotationValueList", "qualifiedName", "literalValue", 
      "expressionList", "idList", "argument", "lambdaArgumentRule", "argumentList"
    },
    std::vector<std::string>{
      "", "'import'", "'from'", "'let'", "'as'", "'with'", "'type'", "'extends'", 
      "'annotation'", "'annotated'", "'def'", "'match'", "'when'", "'where'", 
      "'in'", "'agent'", "'capability'", "'PHYSICAL'", "'VIRTUAL'", "'ATOMIC'", 
      "'proof'", "'invariant'", "'assert'", "'always'", "'eventually'", 
      "'during'", "'until'", "'solver'", "'satisfy'", "'minimize'", "'maximize'", 
      "'variable'", "'stream'", "'rule'", "'emit'", "'signal'", "'within'", 
      "'map'", "'filter'", "'reduce'", "'foreach'", "'group_by'", "'flatmap'", 
      "'zip'", "'partition'", "'take'", "'drop'", "'take_while'", "'drop_while'", 
      "'sort_by'", "'distinct'", "'count'", "'find'", "'any'", "'all'", 
      "'join'", "'on'", "'window'", "'chunk'", "'scan'", "'collect'", "'int'", 
      "'long'", "'float'", "'double'", "'bool'", "'char'", "'string'", "'any_type'", 
      "'never_type'", "'null'", "'List'", "'Map'", "'Set'", "'Pipeline'", 
      "'Stream'", "'Future'", "'Result'", "'Option'", "'Provenance'", "'+'", 
      "'-'", "'*'", "'/'", "'%'", "'=='", "'!='", "'<='", "'<'", "'>='", 
      "'>'", "'&&'", "'||'", "'!'", "'and'", "'or'", "", "'|||'", "'=>'", 
      "'->'", "'|'", "'\\u003F\\u003F'", "'@'", "", "'..'", "'..='", "'..<'", 
      "'^'", "'$'", "'~'", "'_'", "", "", "", "", "", "", "'('", "')'", 
      "'['", "']'", "'{'", "'}'", "'.'", "','", "':'", "';'", "'='"
    },
    std::vector<std::string>{
      "", "IMPORT", "FROM", "LET", "AS", "WITH", "TYPE", "EXTENDS", "ANNOTATION", 
      "ANNOTATED", "DEF", "MATCH", "WHEN", "WHERE", "IN", "AGENT", "CAPABILITY", 
      "PHYSICAL", "VIRTUAL", "ATOMIC", "PROOF", "INVARIANT", "ASSERT", "ALWAYS", 
      "EVENTUALLY", "DURING", "UNTIL", "SOLVER", "SATISFY", "MINIMIZE", 
      "MAXIMIZE", "VARIABLE", "STREAM", "RULE", "EMIT", "SIGNAL", "WITHIN", 
      "MAP", "FILTER", "REDUCE", "FOREACH", "GROUP_BY", "FLATMAP", "ZIP", 
      "PARTITION", "TAKE", "DROP", "TAKE_WHILE", "DROP_WHILE", "SORT_BY", 
      "DISTINCT", "COUNT", "FIND", "ANY", "ALL", "JOIN", "ON", "WINDOW", 
      "CHUNK", "SCAN", "COLLECT", "INT_TYPE", "LONG_TYPE", "FLOAT_TYPE", 
      "DOUBLE_TYPE", "BOOL_TYPE", "CHAR_TYPE", "STRING_TYPE", "ANY_TYPE", 
      "NEVER_TYPE", "NULL_LIT", "LIST_TYPE", "MAP_TYPE", "SET_TYPE", "PIPELINE_TYPE", 
      "STREAM_TYPE", "FUTURE_TYPE", "RESULT_TYPE", "OPTION_TYPE", "PROVENANCE_TYPE", 
      "ADD", "SUB", "MUL", "DIV", "MOD", "EQ", "NEQ", "LE", "LT", "GE", 
      "GT", "AND_OP", "OR_OP", "NOT", "AND", "OR", "PIPELINE_OP", "PARALLEL_OP", 
      "LAMBDA_ARROW", "ARROW", "UNION_PIPE", "NULL_COALESCE", "MUTATE_AT", 
      "BIO_TRANSFORM", "RANGE_OP", "INCLUSIVE_RANGE", "EXCLUSIVE_RANGE", 
      "POSITION_START", "POSITION_END", "COMPLEMENT", "WILDCARD", "BOOLEAN", 
      "INT_LITERAL", "DECIMAL_LITERAL", "STRING", "RAW_STRING", "MULTILINE_STRING", 
      "LPAREN", "RPAREN", "LBRACK", "RBRACK", "LCURLY", "RCURLY", "DOT", 
      "COMMA", "COLON", "SEMI", "EQUALS", "ID", "COMMENT", "BLOCK_COMMENT", 
      "WS", "OPTIONAL"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  olangparserParserStaticData = staticData.release();
}

}

OLangParser::OLangParser(TokenStream *input) : OLangParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

OLangParser::OLangParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  OLangParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *olangparserParserStaticData->atn, olangparserParserStaticData->decisionToDFA, olangparserParserStaticData->sharedContextCache, options);
}

OLangParser::~OLangParser() {
  delete _interpreter;
}

const atn::ATN& OLangParser::getATN() const {
  return *olangparserParserStaticData->atn;
}

std::string OLangParser::getGrammarFileName() const {
  return "OLangParser.g4";
}

const std::vector<std::string>& OLangParser::getRuleNames() const {
  return olangparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& OLangParser::getVocabulary() const {
  return olangparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView OLangParser::getSerializedATN() const {
  return olangparserParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

OLangParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

OLangParser::StatementListContext* OLangParser::ProgramContext::statementList() {
  return getRuleContext<OLangParser::StatementListContext>(0);
}

tree::TerminalNode* OLangParser::ProgramContext::EOF() {
  return getToken(OLangParser::EOF, 0);
}


size_t OLangParser::ProgramContext::getRuleIndex() const {
  return OLangParser::RuleProgram;
}

void OLangParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OLangParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void OLangParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OLangParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any OLangParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OLangParserVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

OLangParser::ProgramContext* OLangParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, OLangParser::RuleProgram);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(314);
    statementList();
    setState(315);
    match(OLangParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementListContext ------------------------------------------------------------------

OLangParser::StatementListContext::StatementListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<OLangParser::StatementContext *> OLangParser::StatementListContext::statement() {
  return getRuleContexts<OLangParser::StatementContext>();
}

OLangParser::StatementContext* OLangParser::StatementListContext::statement(size_t i) {
  return getRuleContext<OLangParser::StatementContext>(i);
}

std::vector<tree::TerminalNode *> OLangParser::StatementListContext::SEMI() {
  return getTokens(OLangParser::SEMI);
}

tree::TerminalNode* OLangParser::StatementListContext::SEMI(size_t i) {
  return getToken(OLangParser::SEMI, i);
}


size_t OLangParser::StatementListContext::getRuleIndex() const {
  return OLangParser::RuleStatementList;
}

void OLangParser::StatementListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OLangParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatementList(this);
}

void OLangParser::StatementListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OLangParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatementList(this);
}


std::any OLangParser::StatementListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OLangParserVisitor*>(visitor))
    return parserVisitor->visitStatementList(this);
  else
    return visitor->visitChildren(this);
}

OLangParser::StatementListContext* OLangParser::statementList() {
  StatementListContext *_localctx = _tracker.createInstance<StatementListContext>(_ctx, getState());
  enterRule(_localctx, 2, OLangParser::RuleStatementList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(317);
    statement();
    setState(324);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(319);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == OLangParser::SEMI) {
          setState(318);
          match(OLangParser::SEMI);
        }
        setState(321);
        statement(); 
      }
      setState(326);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    }
    setState(328);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == OLangParser::SEMI) {
      setState(327);
      match(OLangParser::SEMI);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

OLangParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

OLangParser::DeclarationContext* OLangParser::StatementContext::declaration() {
  return getRuleContext<OLangParser::DeclarationContext>(0);
}

OLangParser::AssignmentStatementContext* OLangParser::StatementContext::assignmentStatement() {
  return getRuleContext<OLangParser::AssignmentStatementContext>(0);
}

OLangParser::AnnotationStatementContext* OLangParser::StatementContext::annotationStatement() {
  return getRuleContext<OLangParser::AnnotationStatementContext>(0);
}

OLangParser::ExpressionStatementContext* OLangParser::StatementContext::expressionStatement() {
  return getRuleContext<OLangParser::ExpressionStatementContext>(0);
}

OLangParser::EmitStatementContext* OLangParser::StatementContext::emitStatement() {
  return getRuleContext<OLangParser::EmitStatementContext>(0);
}

OLangParser::SignalStatementContext* OLangParser::StatementContext::signalStatement() {
  return getRuleContext<OLangParser::SignalStatementContext>(0);
}

OLangParser::AssertStatementContext* OLangParser::StatementContext::assertStatement() {
  return getRuleContext<OLangParser::AssertStatementContext>(0);
}


size_t OLangParser::StatementContext::getRuleIndex() const {
  return OLangParser::RuleStatement;
}

void OLangParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OLangParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void OLangParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OLangParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


std::any OLangParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OLangParserVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

OLangParser::StatementContext* OLangParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 4, OLangParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(337);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(330);
      declaration();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(331);
      assignmentStatement();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(332);
      annotationStatement();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(333);
      expressionStatement();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(334);
      emitStatement();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(335);
      signalStatement();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(336);
      assertStatement();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionStatementContext ------------------------------------------------------------------

OLangParser::ExpressionStatementContext::ExpressionStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

OLangParser::ExpressionContext* OLangParser::ExpressionStatementContext::expression() {
  return getRuleContext<OLangParser::ExpressionContext>(0);
}

tree::TerminalNode* OLangParser::ExpressionStatementContext::SEMI() {
  return getToken(OLangParser::SEMI, 0);
}


size_t OLangParser::ExpressionStatementContext::getRuleIndex() const {
  return OLangParser::RuleExpressionStatement;
}

void OLangParser::ExpressionStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OLangParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpressionStatement(this);
}

void OLangParser::ExpressionStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OLangParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpressionStatement(this);
}


std::any OLangParser::ExpressionStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OLangParserVisitor*>(visitor))
    return parserVisitor->visitExpressionStatement(this);
  else
    return visitor->visitChildren(this);
}

OLangParser::ExpressionStatementContext* OLangParser::expressionStatement() {
  ExpressionStatementContext *_localctx = _tracker.createInstance<ExpressionStatementContext>(_ctx, getState());
  enterRule(_localctx, 6, OLangParser::RuleExpressionStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(339);
    expression();
    setState(340);
    match(OLangParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EmitStatementContext ------------------------------------------------------------------
